WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234158
[CSS Cascade Layers] Layers specified in import rules can not be reordered on media query evaluation
https://bugs.webkit.org/show_bug.cgi?id=234158
Summary
[CSS Cascade Layers] Layers specified in import rules can not be reordered on...
Xiaocheng Hu
Reported
2021-12-10 10:59:55 PST
According to -
https://wpt.fyi/results/css/css-cascade/layer-media-query.html?label=master&label=experimental&aligned&q=css%2Fcss-cascade%2Flayer
-
https://trac.webkit.org/browser/webkit/trunk/LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/layer-media-query-expected.txt
WebKit currently fails the last test case 'C4 Reordering'
Attachments
Patch
(5.43 KB, patch)
2021-12-13 05:55 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-12-13 05:55:18 PST
Created
attachment 446995
[details]
Patch
EWS
Comment 2
2021-12-13 12:40:10 PST
Committed
r286972
(
245194@main
): <
https://commits.webkit.org/245194@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446995
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-13 12:41:20 PST
<
rdar://problem/86427924
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug