[CSS Cascade Layers] Layers specified in import rules can not be reordered on media query evaluation https://bugs.webkit.org/show_bug.cgi?id=234158

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-cascade/layer-media-query-expected.txt:

Source/WebCore:

* style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::addChildRules):
(WebCore::Style::RuleSetBuilder::addRulesFromSheetContents):

@import rules can introduce new layers so need to alse be considered for reordering by media queries
(which requires static evaluation).

(WebCore::Style::RuleSetBuilder::disallowDynamicMediaQueryEvaluationIfNeeded):

Factor into a function.

* style/RuleSetBuilder.h:



Canonical link: https://commits.webkit.org/245194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286972 268f45cc-cd09-0410-ab3c-d52691b4dbfc